[metadata]
name = qa-sphere-frontend-pom-bdd
version = 0.1.0
description =
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Private :: DO NOT UPLOAD PUBLICLY
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
packages =
    src
python_requires = >=3.8.0
setup_requires =
    setuptools>=42.0
zip_safe = no
include_package_data = True

[flake8]
max-line-length = 100
ignore = E203, W503
